# PythonLogger

./: LICENSE  README.md  pre-commit-config.txt  pyproject.toml  setup.cfg
PythonLogger/: CustomLogger.py  __init__.py  logger.py
src/PythonLogger/: CustomLogger.py
src/python_logger/: logger.py
