[project]
name = python_logger
licence = MIT
authors = Iñaki Pujol
description = A logger for python
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages =
    python_logger
python_requires = >=3.9
package_dir =
    =src
zip_safe = no
